<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="deviceContent"
            type="com.example.a1valettest.model.DeviceContent" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/mainCoordinatorFragmentDeviceDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        android:transitionName="@{deviceContent.title}"
        tools:context=".view.fragment.DeviceDetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbarFragmentDeviceDetail"
                style="@style/Base.Widget.Material3.Toolbar"
                app:menu="@menu/device_detail_toolbar_menu"
                app:navigationIcon="@drawable/ic_round_down_24" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layoutDescription="@xml/fragment_device_detail_scene"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewDeviceFragmentDeviceDetail"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                app:imageFromUrl="@{deviceContent.imageUrl}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scrollViewContent"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fillViewport="true"
                android:overScrollMode="never"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageViewDeviceFragmentDeviceDetail">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewCompanyFragmentDeviceDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:gravity="start"
                        android:text="@{deviceContent.company,default=None}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewDeviceNameFragmentDeviceDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:gravity="start"
                        android:text="@{deviceContent.title,default=PhoneName}"
                        android:textAppearance="?attr/textAppearanceHeadlineLarge"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textViewCompanyFragmentDeviceDetail" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewDeviceDescriptionFragmentDeviceDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="16dp"
                        android:gravity="start"
                        android:lineSpacingExtra="4dp"
                        android:text="@{deviceContent.description,default=PhoneDescription}"
                        android:textAppearance="?attr/textAppearanceBodyLarge"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textViewDeviceNameFragmentDeviceDetail" />

                    <View
                        android:id="@+id/splitView"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="16dp"
                        android:alpha="0.08"
                        android:background="?attr/colorOnSurface"
                        app:layout_constraintTop_toBottomOf="@id/textViewDeviceDescriptionFragmentDeviceDetail"
                        tools:layout_editor_absoluteX="16dp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintPrice"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/splitView">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/price"
                            android:textAppearance="?attr/textAppearanceBodyLarge"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/textViewDevicePriceFragmentDeviceDetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:textAppearance="?attr/textAppearanceTitleLarge"
                            app:customPrice="@{deviceContent.price}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:id="@+id/splitView2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="16dp"
                        android:alpha="0.08"
                        android:background="?attr/colorOnSurface"
                        app:layout_constraintTop_toBottomOf="@id/constraintPrice"
                        tools:layout_editor_absoluteX="16dp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintStatus"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/splitView2">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/status"
                            android:textAppearance="?attr/textAppearanceBodyLarge"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/textViewDeviceStatusFragmentDeviceDetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@{deviceContent.status,default=None}"
                            android:textAppearance="?attr/textAppearanceLabelLarge"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:id="@+id/splitView3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="16dp"
                        android:alpha="0.08"
                        android:background="?attr/colorOnSurface"
                        app:layout_constraintTop_toBottomOf="@id/constraintStatus"
                        tools:layout_editor_absoluteX="16dp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintOS"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/splitView3">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/os"
                            android:textAppearance="?attr/textAppearanceBodyLarge"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/textViewDeviceOSFragmentDeviceDetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@{deviceContent.os,default=X}"
                            android:textAppearance="?attr/textAppearanceLabelLarge"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.motion.widget.MotionLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>