<resources>
    <string name="app_name">1ValetTest</string>
    <string name="main">Main</string>
    <string name="home">Home</string>
    <string name="setting">Settings</string>
    <string name="my_devices">My Devices</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="devices">Devices</string>
    <string name="search">search</string>
    <string name="generic_price">Price is $</string>
    <string name="favorite">favorite</string>
    <string name="emptyMyDeviceListError">You don\'t have any favorite device yet</string>
    <string name="noResult">No results</string>
    <string name="price">Price</string>
    <string name="status">Status</string>
    <string name="os">OS</string>
    <string name="remove">Remove</string>

    <string name="successfullyAdded">It successfully added to your list</string>
    <string name="successfullyRemoved">It successfully removed from your list</string>
    <string name="chooseThemeMode">Choose theme mode</string>
    <string name="chooseTheme">Choose theme</string>
    
    <string-array name="theme_item">
        <item>Light</item>
        <item>Dark</item>
        <item>System default</item>
    </string-array>
</resources>